# RBA

./: README.md  caldera.sh  rba.sh  rba_attack.json  sliver.sh  test.json
attack/: havoc_install.sh  install_ngrok.sh  install_sliverC2.sh  rubeus_install.sh  sign_program.sh  update.html
attack/simulation/: app.py  install.sh  pyproject.toml  simulate.py  site.yml
attack/simulation/data/: app.py
attack/simulation/group_vars/: all.yml  save
attack/simulation/roles/asrep/tasks/: main.yml
attack/simulation/roles/check_tools/tasks/: main.yml
attack/simulation/roles/dcshadow/tasks/: main.yml
attack/simulation/roles/dcsync/tasks/: main.yml
attack/simulation/roles/exfiltrate/tasks/: main.yml
attack/simulation/roles/generate_payload/tasks/: main.yml
attack/simulation/roles/install_mimikatz/tasks/: main.yml
attack/simulation/roles/kerberoasting/tasks/: main.yml
attack/simulation/roles/mimikatz_creds/tasks/: main.yml
attack/simulation/roles/mimikatz_dump/tasks/: main.yml
attack/simulation/roles/ntds/tasks/: main.yml
attack/simulation/roles/pastebin/tasks/: main.yml
attack/simulation/roles/rdp/tasks/: main.yml
attack/simulation/roles/rid/tasks/: main.yml
attack/simulation/roles/smb/tasks/: main.yml
attack/simulation/roles/winrm/tasks/: main.yml
attack/simulation/server/: app.py
attack/simulation/tool/: extract_mimikatz.py  ntlm_crack.py
automatisation/: docker-compose.yml  install.sh  readme.txt
automatisation/ci_cd/: .gitlab-ci.yml
install/: attack.sh  install.sh  legacy.sh  rq.txt
rules/alerts/: readme.txt
splunk/: install.sh
(+8 files in other folders)
