[tool.poetry]
name = "ansible-playbook-simulate-attack"
version = "0.1.0"
description = "Simulate attack"
authors = ["Cazeho"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
ansible = "^5.0.0"
pyexpect = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

