[tool.poetry]
name = "ansible-playbook-simulate-attack"
version = "0.1.0"
description = "Simulate attack"
authors = ["Cazeho"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
ansible = "^5.0.0"
pexpect = "^4.9.0"
netexec = { git = "https://github.com/Pennyw0rth/NetExec.git" }
netifaces = "^0.11.0"
pycryptodome = "^3.18.0"
pyperclip = "^1.8.2"
requests = "^2.28.1"
gnureadline = "^8.1.2"
flask = "^3.0.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

